[package]
name = "dioxus_markdown"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["html"] }
comrak = "0.14.0"

[dev-dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }